# serializer version: 1
# name: test_pipe_extend_ok[pipe_extend_multi]
  '''
  start
    query_statement
      query_expr
        pipe_expr
          pipe_start
            pipe_from
              from_clause
                bigquery__from_item_table
                  bigquery__path_expression
                    bigquery__ident	table1
          pipe_item
            pipe_operator
              pipe_extend
                extend_list
                  extend_item
                    column_expr
                      bigquery__function_call_expr
                        column_expr
                          bigquery__ident	POW
                        bigquery__function_args
                          bigquery__pos_arg
                            column_expr
                              bigquery__ident	col1
                          bigquery__pos_arg
                            column_expr
                              bigquery__literal
                                bigquery__integer_literal	2
                    as_alias
                      bigquery__ident	col2
                  extend_item
                    column_expr
                      bigquery__function_call_expr
                        column_expr
                          bigquery__ident	EXP
                        bigquery__function_args
                          bigquery__pos_arg
                            column_expr
                              bigquery__ident	col1
                          bigquery__pos_arg
                            column_expr
                              bigquery__literal
                                bigquery__integer_literal	2
  
  '''
# ---
# name: test_pipe_extend_ok[pipe_extend_single]
  '''
  start
    query_statement
      query_expr
        pipe_expr
          pipe_start
            pipe_from
              from_clause
                bigquery__from_item_table
                  bigquery__path_expression
                    bigquery__ident	table1
          pipe_item
            pipe_operator
              pipe_extend
                extend_list
                  extend_item
                    column_expr
                      bigquery__function_call_expr
                        column_expr
                          bigquery__ident	POW
                        bigquery__function_args
                          bigquery__pos_arg
                            column_expr
                              bigquery__ident	col1
                          bigquery__pos_arg
                            column_expr
                              bigquery__literal
                                bigquery__integer_literal	2
  
  '''
# ---
# name: test_pipe_extend_ok[pipe_extend_single_alias]
  '''
  start
    query_statement
      query_expr
        pipe_expr
          pipe_start
            pipe_from
              from_clause
                bigquery__from_item_table
                  bigquery__path_expression
                    bigquery__ident	table1
          pipe_item
            pipe_operator
              pipe_extend
                extend_list
                  extend_item
                    column_expr
                      bigquery__function_call_expr
                        column_expr
                          bigquery__ident	POW
                        bigquery__function_args
                          bigquery__pos_arg
                            column_expr
                              bigquery__ident	col1
                          bigquery__pos_arg
                            column_expr
                              bigquery__literal
                                bigquery__integer_literal	2
                    as_alias
                      bigquery__ident	col2
  
  '''
# ---
# name: test_pipe_extend_ok[pipe_extend_single_trailing_comma]
  '''
  start
    query_statement
      query_expr
        pipe_expr
          pipe_start
            pipe_from
              from_clause
                bigquery__from_item_table
                  bigquery__path_expression
                    bigquery__ident	table1
          pipe_item
            pipe_operator
              pipe_extend
                extend_list
                  extend_item
                    column_expr
                      bigquery__function_call_expr
                        column_expr
                          bigquery__ident	POW
                        bigquery__function_args
                          bigquery__pos_arg
                            column_expr
                              bigquery__ident	col1
                          bigquery__pos_arg
                            column_expr
                              bigquery__literal
                                bigquery__integer_literal	2
  
  '''
# ---
# name: test_pipe_ok[pipe_from]
  '''
  start
    query_statement
      query_expr
        pipe_from
          from_clause
            bigquery__from_item_table
              bigquery__path_expression
                bigquery__ident	table1
  
  '''
# ---
# name: test_pipe_ok[pipe_from_select]
  '''
  start
    query_statement
      query_expr
        pipe_expr
          pipe_start
            pipe_from
              from_clause
                bigquery__from_item_table
                  bigquery__path_expression
                    bigquery__ident	table1
          pipe_item
            pipe_operator
              pipe_select
                select_list
                  bigquery__select_item
                    bigquery__select_expr
                      column_expr
                        bigquery__ident	col1
  
  '''
# ---
# name: test_pipe_ok[pipe_select_select]
  '''
  start
    query_statement
      query_expr
        pipe_expr
          pipe_start
            select
              select_list
                bigquery__select_item
                  bigquery__select_expr
                    column_expr
                      bigquery__ident	col1
              bigquery__select_from
                from_clause
                  bigquery__from_item_table
                    bigquery__path_expression
                      bigquery__ident	table1
          pipe_item
            pipe_operator
              pipe_select
                select_list
                  bigquery__select_item
                    bigquery__select_expr
                      column_expr
                        bigquery__ident	col1
  
  '''
# ---
# name: test_pipe_ok[pipe_subquery_select]
  '''
  start
    query_statement
      query_expr
        pipe_expr
          pipe_start
            subquery
              query_expr
                select
                  select_list
                    bigquery__select_item
                      bigquery__select_expr
                        column_expr
                          bigquery__ident	col1
                  bigquery__select_from
                    from_clause
                      bigquery__from_item_table
                        bigquery__path_expression
                          bigquery__ident	table1
          pipe_item
            pipe_operator
              pipe_select
                select_list
                  bigquery__select_item
                    bigquery__select_expr
                      column_expr
                        bigquery__ident	col1
  
  '''
# ---
